iodine (0.6.0~rc1-6) UNRELEASED; urgency=low

  * New patch: cmdline-r-u.patch. Due to a missing "break", -r causes -u to
    have no effect (client). Thanks to Pavel Pergamenshchik for the bug report
    and the patch.
    LP: #880508

 -- gregor herrmann <gregoa@debian.org>  Sun, 23 Oct 2011 22:23:31 +0200

iodine (0.6.0~rc1-5) unstable; urgency=low

  * Don't source /etc/default/iodine in config script but read out the values
    with awk. This allows to use shell constructs like $() in the file and
    preserve them during re-configuration (closes: #612723).
    Thanks to "Debian bug at v.nix.is" for the bug report.
  * Add a logcheck filter; thanks to martin f krafft for the bug report and
    the logcheck file (closes: #612721).
  * Add patch armel_ftbfs.patch: Rename struct user to struct _user in the
    code to avoid naming conflict caused by including <sys/user.h> as part of
    the armel build. Taken from Ubuntu; not needed currently in Debian but
    saves Ubuntu from carrying the patch and might be helpful later.

 -- gregor herrmann <gregoa@debian.org>  Sat, 12 Feb 2011 14:49:06 +0100

iodine (0.6.0~rc1-4) unstable; urgency=low

  * Upload to unstable.

 -- gregor herrmann <gregoa@debian.org>  Mon, 07 Feb 2011 18:38:57 +0100

iodine (0.6.0~rc1-3) experimental; urgency=low

  [ gregor herrmann ]
  * Build with hardening; thanks to Romain Francoise for the bug report and
    the patch (closes: #589054).
  * New patch uninitialized-inside_topdomain.patch: initialize
    inside_topdomain before using it; thanks to Samuel Thibault for the bug
    report and the patch (closes: #596740).
  * Set Standards-Version to 3.9.1 (no changes).
  * Add Danish debconf translation, thanks to Joe Dalton (closes: #602447).
  * Update iodine-client-start to version 1.0.3, commit 04c2dee
    (closes: #605703).
  * debian/copyright: update years of packaging copyright, update formatting.
  * Update to experimental because of the freeze.

  [ tony mancill ]