@@ -3,8 +3,12 @@ Section: net
 Priority: extra
 Maintainer: gregor herrmann <gregoa@debian.org>
 Uploaders: tony mancill <tmancill@debian.org>
-Build-Depends: debhelper (>= 7.0.50), po-debconf, help2man,
- zlib1g-dev, check, hardening-includes
+Build-Depends: check,
+ dpkg-dev (>= 1.16.1),
+ debhelper (>= 8.9.4),
+ help2man,
+ po-debconf,
+ zlib1g-dev,
 Standards-Version: 3.9.1
 Homepage: http://code.kryo.se/iodine
 Vcs-Svn: http://svn.toastfreeware.priv.at/debian/iodine/trunk/
@@ -12,8 +16,14 @@ Vcs-Browser: http://svn.toastfreeware.priv.at/wsvn/ToastfreewareDebian/iodine/tr
 
 Package: iodine
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, udev | makedev, adduser
-Suggests: iproute, ipcalc, dnsutils, fping, gawk
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ adduser,
+ udev | makedev
+Suggests: dnsutils,
+ fping,
+ gawk,
+ ipcalc,
+ iproute
 Description: tool for tunneling IPv4 data through a DNS server
  This is a piece of software that lets you tunnel IPv4 data through a DNS
  server. This can be usable in different situations where internet access is
